Compiler/tests/bad/set6.nx
type t1 = [0 .. 1];

type t = [0 .. t];
